# maf

./: .gitignore  .maf.example.yml  README.md  pyproject.toml
.claude/commands/: maf-approve-spec.md  maf-finalize.md  maf-research-loop.md  maf-spec.md
.codex/skills/multi-agent-flow/agents/: openai.yaml
.codex/skills/multi-agent-flow/references/: commands.md
src/multi_agent_flow/: __init__.py  cli.py  config.py  default_maf.yml  fetch_source.py  git.py  models.py  progress.py  prompts.py  state.py  write_findings.py
src/multi_agent_flow/agents/: __init__.py  base.py  claude.py  codex.py  gemini.py
src/multi_agent_flow/inputs/: __init__.py  markdown.py  normalize.py  pdf.py  text.py
src/multi_agent_flow/phases/: __init__.py  build.py  common.py  finalize.py  research.py  research_loop.py  review.py  spec.py
src/multi_agent_flow/prompts/: build-decompose.md  build-phase.md  build.md  critique_final.md  critique_synthesis.md  critique_worker.md  deep_research_final.md  deep_research_synthesis.md  deep_research_worker.md  finalize.md  research_synthesis.md  research_worker.md  review.md  spec.md
src/multi_agent_flow/scaffolds/claude/: CLAUDE.md
src/multi_agent_flow/scaffolds/claude/commands/: maf-build.md  maf-deep-research.md  maf-flow.md  maf-init.md  maf-research.md  maf-review.md  maf-status.md
src/multi_agent_flow/scaffolds/codex/: config.toml
src/multi_agent_flow/scaffolds/codex/skills/multi-agent-flow/: SKILL.md
src/multi_agent_flow/scaffolds/gemini/: settings.json
src/multi_agent_flow/validation/: __init__.py  runner.py
(+1 files in other folders)
