[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-flow"
version = "0.1.0"
description = "Reusable multi-agent delivery baseline for Claude, Codex, and Gemini CLIs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "pypdf>=5.0.0",
]

[project.scripts]
maf = "multi_agent_flow.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
multi_agent_flow = ["prompts/*.md", "default_maf.yml", "scaffolds/**/*.md", "scaffolds/**/*.yaml", "scaffolds/**/*.yml"]
